--- a/index.html
+++ b/index.html
@@ -14,7 +14,35 @@
   </head>
   <body>
     <header>
-      <nav class="container navbar navbar-expand-lg"></nav>
+      <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <a class="navbar-brand" href="#">
+            <img class="nav-img" src="images/ICON/Logo.png" alt="logo" />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ml-auto">
+              <a class="nav-item nav-link active" href="#"
+                >Books <span class="sr-only">(current)</span></a
+              >
+              <a class="nav-item nav-link" href="#">Courses</a>
+              <a class="nav-item nav-link" href="#">Others</a>
+              <a class="nav-item nav-link" href="#">Blog</a>
+              <a class="nav-item nav-link sign-in-btn" href="#">Sign In</a>
+            </div>
+          </div>
+        </nav>
+      </div>
     </header>
 
     <script
