--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light" id="mynavbar">
+      <nav class="navbar navbar-expand-lg navbar-light " id="mynavbar">
         <a class="navbar-brand" href="#"
           ><img src="images/ICON/Logo.png" height="50px" alt=""
         /></a>
