--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class="col-md-7">
               <img
-                src="images/photos/illustration.png"
+                src="images/Photos/illustration.png"
                 class="float-right"
                 width="554px"
                 height="346px"
@@ -77,17 +77,17 @@
                   <p class="icon-text">Learn Anything</p>
               </div>
               <div class="icon-box d-flex flex-column justify-content-center align-items-center">
-                  <img src="images/ICON/student.png" class="icon" alt="">
+                  <img src="images/ICON/Student.png" class="icon" alt="">
                   <h3 class="icon-heading">1800+ Students</h3>
                   <p class="icon-text">Learn Anything</p>
               </div>
               <div class="icon-box d-flex flex-column justify-content-center align-items-center">
-                  <img src="images/ICON/test.png" class="icon" alt="">
+                  <img src="images/ICON/Test.png" class="icon" alt="">
                   <h3 class="icon-heading">9K+ Test Token</h3>
                   <p class="icon-text">Learn Anything</p>
               </div>
               <div class="icon-box d-flex flex-column justify-content-center align-items-center">
-                  <img src="images/ICON/students.png" class="icon" alt="">
+                  <img src="images/ICON/Students.png" class="icon" alt="">
                   <h3 class="icon-heading">2000+ Student</h3>
                   <p class="icon-text">Learn Anything</p>
               </div>
