--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Varius
                 blandit facilisis quam netus.
               </p>
-              <button class="btn btn-success banner-btn">Get Started</button>
+              <!-- <button class="btn btn-success banner-btn">Get Started</button> -->
+              <button type="button" class="btn btn-success banner-btn" data-toggle="modal" data-target="#exampleModal">
+  Get Started
+</button>
             </div>
             <div class="col-md-7">
               <img
@@ -96,6 +99,26 @@
           </div>
         </div>
     </section>
+    <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <!-- <h5 class="modal-title" id="exampleModalLabel">Modal title</h5> -->
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+      <img src="images/Photos/welcome.png" height="100" alt="">
+      </div>
+      <div class="modal-footer">
+        <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button> -->
+      </div>
+    </div>
+  </div>
+</div>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
