--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- title logo  -->
+    <link
+      rel="icon"
+      href="images/ICON/Logo.png"
+      type="image/x-icon"
+    />
+    <!-- bootstrap css  -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
@@ -11,10 +18,16 @@
     />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <!-- animate css  -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <link rel="stylesheet" href="style.css" />
     <title>Mid Term Exam MIS 455</title>
   </head>
   <body>
+    <!-- header start  -->
     <header>
       <nav class="navbar navbar-expand-lg navbar-light " id="mynavbar">
         <a class="navbar-brand" href="#"
@@ -44,12 +57,13 @@
           </ul>
         </div>
       </nav>
+      <!-- banner start  -->
       <div class="banner">
         <div class="container">
           <div class="row">
             <div class="col-md-5">
               <p class="banner-paragraph">Are you ready to Learn?</p>
-              <h1 class="banner-heading">
+              <h1 class="banner-heading animate__animated animate__backInDown">
                 Learn With fun<br />on <span>any schedule</span>
               </h1>
               <p class="banner-paragraph-2">
@@ -73,7 +87,11 @@
           </div>
         </div>
       </div>
+      <!-- banner end  -->
     </header>
+    <!-- header end  -->
+
+    <!-- card section start  -->
         <section class="second-part">
         <div class="container">
           <div class="row d-flex justify-content-center">
@@ -102,6 +120,7 @@
           </div>
         </div>
     </section>
+    <!-- card section end  -->
     <!-- Off-Canvas -->
    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
   <div class="offcanvas-header">
@@ -163,3 +182,6 @@
     ></script>
   </body>
 </html>
+
+<!-- Name: Imran Shahadat Noble 
+ID: 1410312 -->
